--- a/date/2024-10/index.htm
+++ b/date/2024-10/index.htm
@@ -268,8 +268,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-11-free-subscribe-node.htm">10月11日更新21.6M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、新加坡、欧洲、韩国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-17-clash-node.htm">9月17日更新20M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、新加坡、欧洲、加拿大、韩国、日本等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -278,8 +278,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-26-free-v2ray-subscribe.htm">8月26日更新18M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、加拿大、新加坡、欧洲、韩国、美国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-9-clash-node-daily-updates.htm">6月9日更新21.8M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、香港、日本、欧洲、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -288,8 +288,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-9-free-node-subscribe-links.htm">9月9日更新18.4M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、香港、欧洲、韩国、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-24-clash-windows.htm">3月24日更新21.3M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、香港、欧洲、日本、新加坡、美国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -298,8 +298,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-8-node-share-links.htm">6月8日更新21.3M/S，2024年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、美国、新加坡、日本、香港、欧洲、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-21-free-ssr-node.htm">9月21日更新18.7M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、韩国、日本、加拿大、欧洲、香港、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -308,8 +308,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-7-free-clash.htm">10月7日更新21.1M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、新加坡、香港、韩国、加拿大、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-17-clash-node.htm">5月17日更新21.2M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -318,8 +318,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-27-clash-node.htm">6月27日更新19.3M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、加拿大、香港、新加坡、欧洲、日本等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-27-free-subscribe-node.htm">8月27日更新18.3M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -328,8 +328,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-10-free-subscribe-node.htm">4月10日更新21.9M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、韩国、美国、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-18-node-share-links.htm">10月18日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、韩国、欧洲、美国、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -338,8 +338,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-20-shadowrocket-node.htm">8月20日更新18.6M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、欧洲、韩国、美国、日本、新加坡等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-22-free-v2ray.htm">9月22日更新20.4M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、韩国、欧洲、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -348,8 +348,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-14-free-high-speed-nodes.htm">9月14日更新20.5M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、新加坡、加拿大、韩国、香港、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-18-clash-windows.htm">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -370,7 +370,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
